; ModuleID = '/home/carl/AnghaBench/lede/target/linux/ramips/files-4.14/drivers/net/ethernet/mediatek/extr_soc_mt7621.c_mt7621_gsw_config.c'
source_filename = "/home/carl/AnghaBench/lede/target/linux/ramips/files-4.14/drivers/net/ethernet/mediatek/extr_soc_mt7621.c_mt7621_gsw_config.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.fe_priv = type { i64, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.fe_priv*)* @mt7621_gsw_config to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @mt7621_gsw_config(%struct.fe_priv* %0) #0 {
  %2 = alloca %struct.fe_priv*, align 8
  store %struct.fe_priv* %0, %struct.fe_priv** %2, align 8
  %3 = load %struct.fe_priv*, %struct.fe_priv** %2, align 8
  %4 = getelementptr inbounds %struct.fe_priv, %struct.fe_priv* %3, i32 0, i32 0
  %5 = load i64, i64* %4, align 8
  %6 = icmp ne i64 %5, 0
  br i1 %6, label %7, label %21

7:                                                ; preds = %1
  %8 = load %struct.fe_priv*, %struct.fe_priv** %2, align 8
  %9 = getelementptr inbounds %struct.fe_priv, %struct.fe_priv* %8, i32 0, i32 0
  %10 = load i64, i64* %9, align 8
  %11 = call i64 @mdiobus_get_phy(i64 %10, i32 31)
  %12 = icmp ne i64 %11, 0
  br i1 %12, label %13, label %21

13:                                               ; preds = %7
  %14 = load %struct.fe_priv*, %struct.fe_priv** %2, align 8
  %15 = getelementptr inbounds %struct.fe_priv, %struct.fe_priv* %14, i32 0, i32 1
  %16 = load i32, i32* %15, align 8
  %17 = load %struct.fe_priv*, %struct.fe_priv** %2, align 8
  %18 = getelementptr inbounds %struct.fe_priv, %struct.fe_priv* %17, i32 0, i32 0
  %19 = load i64, i64* %18, align 8
  %20 = call i32 @mt7530_probe(i32 %16, i32* null, i64 %19, i32 1)
  br label %21

21:                                               ; preds = %13, %7, %1
  ret i32 0
}

declare dso_local i64 @mdiobus_get_phy(i64, i32) #1

declare dso_local i32 @mt7530_probe(i32, i32*, i64, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
